# itia_motion

./: README.md  contributors.txt  dependency.txt
itia_fir_planner/: CMakeLists.txt  package.xml
itia_fir_planner/config/: fir_planner_config.yaml  fir_test.yaml  trajectory_waypoints_example.yaml
itia_fir_planner/include/itia_fir_planner/: itia_fir_interpolate_service.h  itia_fir_planner.h  itia_fir_planner.h.0  velocity_profile.h
itia_fir_planner/launch/: interpolate_server.launch
itia_fir_planner/src/: itia_fir_interpolate_client.cpp  itia_fir_interpolate_server.cpp  itia_fir_planner_test.cpp
itia_fir_planner/src/itia_fir_planner/: itia_fir_interpolate_service.cpp  itia_fir_planner.cpp  itia_fir_planner.cpp.0  velocity_profile.cpp
itia_helios/: CMakeLists.txt  helios_plugins.xml  package.xml
itia_helios/cfg/: helios_par.yaml  helios_qp_pc.yaml  helios_qp_pc_2.yaml  test_helios.yaml  test_helios.yaml.0  test_helios2.yaml  trj1.yaml  trj_J2_orizzontale.yaml  trj_J2_verticale.yaml  trj_jnt2.yaml
itia_helios/include/itia_helios/: helios_nodelet.h  motion_law_base.h  mpc_planner.h  path_base.h
itia_helios/launch/: helios.launch  mpc_test.launch  mpc_test_4by3.launch  mpc_test_4by3_filt.launch
itia_helios/src/: test_mpc.cpp
itia_helios/src/itia_helios/: helios_nodelet.cpp  mpc_planner.cpp
itia_helios_plan_adapter/: CMakeLists.txt  package.xml
itia_helios_plan_adapter/include/itia_helios_plan_adapter/: itia_helios_adapter.h
itia_kdl_interpolator/: CMakeLists.txt  CMakeLists.txt~  package.xml
itia_kdl_interpolator/cfg/: CartPos_test.yaml  ParameterSet.yaml
itia_kdl_interpolator/include/itia_kdl_interpolator/: interpolator_KDL.h~  interpolator_kdl.h  velocityProfile_TrapMerge.hpp
itia_kdl_interpolator/launch/: redundancy.launch  redundancy.launch~
itia_kdl_interpolator/src/: interpolator_KDL.cpp~  interpolator_KDL_server.cpp~  interpolator_kdl.cpp  interpolator_kdl.cpp~  interpolator_kdl_server.cpp  interpolator_kdl_server.cpp~  trajectory_composite.cpp  velocityProfile_TrapMerge.cpp  velocityProfile_TrapMerge.cpp~
itia_motion/: CMakeLists.txt  package.xml
