<?xml version="1.0"?>
<package>
  <name>itia_helios</name>
  <version>0.0.0</version>
  <description>The itia_helios package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="maxwell@todo.todo">maxwell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>itia_futils</build_depend>
  <build_depend>itia_gutils</build_depend>
  <build_depend>itia_mutils</build_depend>
  <build_depend>itia_rutils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_models</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>itia_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>itia_dynamics_core</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>actionlib</build_depend>
	<build_depend>itia_motion_msgs</build_depend>
	<build_depend>itia_fir_planner</build_depend>
	
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>itia_futils</run_depend>
  <run_depend>itia_gutils</run_depend>
  <run_depend>itia_mutils</run_depend>
  <run_depend>itia_rutils</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_models</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>itia_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>itia_dynamics_core</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nodelet</run_depend>
	<run_depend>itia_motion_msgs</run_depend>
	<run_depend>itia_fir_planner</run_depend>
	
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/helios_plugins.xml" />
  </export>
</package>